--- a/app/views/assessments/index.html.erb
+++ b/app/views/assessments/index.html.erb
@@ -7,6 +7,8 @@
     <tr>
       <th>Name</th>
       <th>Description</th>
+      <th>Exam</th>
+      <th>Standard</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,6 +18,8 @@
       <tr>
         <td><%= assessment.name %></td>
         <td><%= assessment.description %></td>
+        <td><%= assessment.exam.name %></td>
+        <td><%= assessment.standard.name %></td>
         <td><%= link_to 'Show', assessment %></td>
         <td><%= link_to 'Edit', edit_assessment_path(assessment) %></td>
         <td><%= link_to 'Destroy', assessment, method: :delete, data: { confirm: 'Are you sure?' } %></td>
