--- a/app/views/assessments/show.html.erb
+++ b/app/views/assessments/show.html.erb
@@ -10,5 +10,15 @@
   <%= @assessment.description %>
 </p>
 
+<p>
+  <strong>Standard:</strong>
+  <%= @assessment.standard.name if @assessment.standard %>
+</p>
+
+<p>
+  <strong>Exam:</strong>
+  <%= @assessment.exam.name if @assessment.exam %>
+</p>
+
 <%= link_to 'Edit', edit_assessment_path(@assessment) %> |
 <%= link_to 'Back', assessments_path %>
