--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
       <%= link_to "Standards", standards_path %>
       <%= link_to "Exams", exams_path %>
       <%= link_to "Assessments", assessments_path %>
-      <%= link_to "Results", results_path %>
+      <%= link_to "Attempts", attempts_path %>
     </p>
     <hr>
     <%= yield %>
