--- a/app/views/attempts/index.html.erb
+++ b/app/views/attempts/index.html.erb
@@ -5,6 +5,9 @@
 <table>
   <thead>
     <tr>
+      <th>Student</th>
+      <th>Exam</th>
+      <th>Standard</th>
       <th>Outcome</th>
       <th>Note</th>
       <th colspan="3"></th>
@@ -14,6 +17,9 @@
   <tbody>
     <% @attempts.each do |attempt| %>
       <tr>
+        <td><%= attempt.student.name %></td>
+        <td><%= attempt.assessment.exam.name %></td>
+        <td><%= attempt.assessment.standard.name %></td>
         <td><%= attempt.outcome %></td>
         <td><%= attempt.note %></td>
         <td><%= link_to 'Show', attempt %></td>
@@ -26,4 +32,4 @@
 
 <br>
 
-<%= link_to 'New Result', new_attempt_path %>
+<%= link_to 'New Attempt', new_attempt_path %>
