--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
   <body>
     <h1>sbg-rails</h1>
     <p>
+      <%= link_to "Home", :root %>
       <%= link_to "Students", students_path %>
       <%= link_to "Standards", standards_path %>
       <%= link_to "Exams", exams_path %>
