working gradebook for exams

--- a/app/views/attempts/_form.html.erb
+++ b/app/views/attempts/_form.html.erb
@@ -23,7 +23,7 @@
 
   <div class="field">
     <%= f.label :outcome %>
-    <%= f.select :outcome_id, Attempt::OUTCOMES %>
+    <%= f.select :outcome_id, Attempt::OUTCOME_ARRAY %>
   </div>
 
   <div class="field">
