--- a/app/views/exams/index.html.erb
+++ b/app/views/exams/index.html.erb
@@ -17,6 +17,7 @@
         <td><%= exam.name %></td>
         <td><%= exam.description %></td>
         <td><%= link_to 'Show', exam %></td>
+        <td><%= link_to 'Grade', grade_exam_path(exam) %></td>
         <td><%= link_to 'Edit', edit_exam_path(exam) %></td>
         <td><%= link_to 'Destroy', exam, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
