--- a/app/views/exams/show.html.erb
+++ b/app/views/exams/show.html.erb
@@ -20,4 +20,5 @@
 </p>
 
 <%= link_to 'Edit', edit_exam_path(@exam) %> |
+<%= link_to 'Grade', grade_exam_path(@exam) %> |
 <%= link_to 'Back', exams_path %>
