--- a/app/views/exams/grade.html.erb
+++ b/app/views/exams/grade.html.erb
@@ -13,16 +13,37 @@
       </tr>
     </thead>
     <tbody>
-      <% @students.each do |student| %>
+      <% @students.each_with_index do |student,i| %>
         <tr>
           <td><%= student.name %></td>
           <% @exam.assessments.each do |assessment| %>
-            <td style="text-align:center">
+            <td style="
+              text-align:center;
+              font-size:1.2em;
+              font-weight:bold;
+              <% if student.deciding_attempt(assessment).outcome_id == -2 %>
+                color:gray;
+              <% elsif student.deciding_attempt(assessment).outcome_id == -1 %>
+                color:red;
+              <% elsif student.deciding_attempt(assessment).outcome_id == 0 %>
+                color:blue;
+              <% else %>
+                color:green;
+              <% end %>
+            ">
               <%= student.deciding_attempt(assessment).outcome %><br>
               <%= select_tag "attempt[#{student.id}][#{assessment.id}]", options_for_select(Attempt::OUTCOME_ARRAY), include_blank: true %>
             </td>
           <% end %>
         </tr>
+        <% if i % 5 == 4 %>
+          <tr style="color:gray;">
+            <td></td>
+            <% @exam.assessments.each do |assessment| %>
+              <td style="text-align:center"><%= assessment.standard.name %></td>
+            <% end %>
+          </tr>
+        <% end %>
       <% end %>
     </tbody>
   </table>
