grade action for student

--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -21,6 +21,7 @@
         <td><%= student.school_identifier %></td>
         <td><%= student.email %></td>
         <td><%= link_to 'Show', student %></td>
+        <td><%= link_to 'Grade', grade_student_path(student) %></td>
         <td><%= link_to 'Edit', edit_student_path(student) %></td>
         <td><%= link_to 'Destroy', student, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
