--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -20,5 +20,6 @@
   <%= @student.email %>
 </p>
 
+<%= link_to 'Grade', grade_student_path(@student) %> |
 <%= link_to 'Edit', edit_student_path(@student) %> |
 <%= link_to 'Back', students_path %>
