add progress reporting

--- a/app/views/exams/show.html.erb
+++ b/app/views/exams/show.html.erb
@@ -10,15 +10,9 @@
   <%= @exam.description %>
 </p>
 
-<p>
-  <strong>Standards:</strong>
-  <ul>
-    <% @exam.standards.each do |standard| %>
-      <li><%= link_to standard.name, standard_path(standard) %></li>
-    <% end %>
-  </ul>
-</p>
-
 <%= link_to 'Grade', grade_exam_path(@exam) %> |
 <%= link_to 'Edit', edit_exam_path(@exam) %> |
 <%= link_to 'Back', exams_path %>
+
+<h3>Progress Report</h3>
+<%= render 'progress', exam: @exam, students: @students, editable: false %>
