--- a/app/views/exams/grade.html.erb
+++ b/app/views/exams/grade.html.erb
@@ -7,4 +7,5 @@
   <%= submit_tag("Update") %>
 <% end %>
 
-<%= link_to 'Back', exams_path %>
+<%= link_to 'Show', @exam %>
+<%= link_to 'Back', :exams %>
