--- a/app/views/students/_progress.html.erb
+++ b/app/views/students/_progress.html.erb
@@ -16,17 +16,17 @@
             <td style="
               font-size:1.2em;
               font-weight:bold;
-              <% if student.deciding_attempt(assessment).outcome_id == -2 %>
+              <% if student.decisive_attempt(assessment).outcome_id == -2 %>
                 color:gray;
-              <% elsif student.deciding_attempt(assessment).outcome_id == -1 %>
+              <% elsif student.decisive_attempt(assessment).outcome_id == -1 %>
                 color:red;
-              <% elsif student.deciding_attempt(assessment).outcome_id == 0 %>
+              <% elsif student.decisive_attempt(assessment).outcome_id == 0 %>
                 color:blue;
               <% else %>
                 color:green;
               <% end %>
             ">
-              <%= student.deciding_attempt(assessment).outcome %><br>
+              <%= student.decisive_attempt(assessment).outcome %><br>
               <%= select_tag "attempt[#{assessment.id}]", options_for_select(Attempt::OUTCOME_ARRAY), include_blank: true if editable %>
             </td>
           <% else %>
