only show assessed standards in reports

--- a/app/views/standards/index.html.erb
+++ b/app/views/standards/index.html.erb
@@ -2,6 +2,12 @@
 
 <h1>Standards</h1>
 
+<h3>Progress Report</h3>
+
+<%= render 'progress', students: Student.all, standards: Standard.all_assessed %>
+
+<h3>Index</h3>
+
 <table>
   <thead>
     <tr>
