--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -5,8 +5,7 @@
 <table>
   <thead>
     <tr>
-      <th>First name</th>
-      <th>Last name</th>
+      <th>Name</th>
       <th>School identifier</th>
       <th>Email</th>
       <th colspan="3"></th>
@@ -16,8 +15,7 @@
   <tbody>
     <% @students.each do |student| %>
       <tr>
-        <td><%= student.first_name %></td>
-        <td><%= student.last_name %></td>
+        <td><%= student.name %></td>
         <td><%= student.school_identifier %></td>
         <td><%= student.email %></td>
         <td><%= link_to 'Show', student %></td>
