fix master progress report view

--- a/app/views/static_pages/progress.html.erb
+++ b/app/views/static_pages/progress.html.erb
@@ -2,5 +2,5 @@
   <h3 style="page-break-before:always">
     Progress Report for <%=student.name%>
   </h3>
-  <%= render 'students/progress', student: student, exams: Exam.all, editable: false %>
+  <%= render 'students/progress', student: student, exams: Exam.all, standards: Standard.all_assessed, editable: false %>
 <% end %>
