link to New Attempt instead of Attempts index

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
       <%= link_to "Standards", :standards %>
       <%= link_to "Exams", :exams %>
       <%= link_to "Assessments", :assessments %>
-      <%= link_to "Attempts", :attempts %>
+      <%= link_to "New Attempt", :new_attempt %>
     </p>
     <hr>
     <%= yield %>
