link to 'Index' instead of 'Back'

--- a/app/views/assessments/edit.html.erb
+++ b/app/views/assessments/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form', assessment: @assessment %>
 
 <%= link_to 'Show', @assessment %> |
-<%= link_to 'Back', assessments_path %>
+<%= link_to 'Index', assessments_path %>
