--- a/app/views/assessments/show.html.erb
+++ b/app/views/assessments/show.html.erb
@@ -21,4 +21,4 @@
 </p>
 
 <%= link_to 'Edit', edit_assessment_path(@assessment) %> |
-<%= link_to 'Back', assessments_path %>
+<%= link_to 'Index', assessments_path %>
