--- a/app/views/attempts/edit.html.erb
+++ b/app/views/attempts/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form', attempt: @attempt %>
 
 <%= link_to 'Show', @attempt %> |
-<%= link_to 'Back', attempts_path %>
+<%= link_to 'Index', attempts_path %>
