--- a/app/views/exams/edit.html.erb
+++ b/app/views/exams/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form', exam: @exam %>
 
 <%= link_to 'Show', @exam %> |
-<%= link_to 'Back', exams_path %>
+<%= link_to 'Index', exams_path %>
