--- a/app/views/standards/edit.html.erb
+++ b/app/views/standards/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form', standard: @standard %>
 
 <%= link_to 'Show', @standard %> |
-<%= link_to 'Back', standards_path %>
+<%= link_to 'Index', standards_path %>
