--- a/app/views/standards/show.html.erb
+++ b/app/views/standards/show.html.erb
@@ -25,4 +25,4 @@
 </p>
 
 <%= link_to 'Edit', edit_standard_path(@standard) %> |
-<%= link_to 'Back', standards_path %>
+<%= link_to 'Index', standards_path %>
