--- a/app/views/students/edit.html.erb
+++ b/app/views/students/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form', student: @student %>
 
 <%= link_to 'Show', @student %> |
-<%= link_to 'Back', students_path %>
+<%= link_to 'Index', students_path %>
