--- a/app/views/assessments/new.html.erb
+++ b/app/views/assessments/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form', assessment: @assessment %>
 
-<%= link_to 'Back', assessments_path %>
+<%= link_to 'Index', assessments_path %>
