--- a/app/views/attempts/show.html.erb
+++ b/app/views/attempts/show.html.erb
@@ -11,4 +11,4 @@
 </p>
 
 <%= link_to 'Edit', edit_attempt_path(@attempt) %> |
-<%= link_to 'Back', attempts_path %>
+<%= link_to 'Index', attempts_path %>
