--- a/app/views/exams/show.html.erb
+++ b/app/views/exams/show.html.erb
@@ -12,7 +12,7 @@
 
 <%= link_to 'Grade', grade_exam_path(@exam) %> |
 <%= link_to 'Edit', edit_exam_path(@exam) %> |
-<%= link_to 'Back', exams_path %>
+<%= link_to 'Index', exams_path %>
 
 <h3>Progress Report</h3>
 <%= render 'progress', exam: @exam, students: @students, editable: false %>
