--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -22,7 +22,7 @@
 
 <%= link_to 'Grade', grade_student_path(@student) %> |
 <%= link_to 'Edit', edit_student_path(@student) %> |
-<%= link_to 'Back', students_path %>
+<%= link_to 'Index', students_path %>
 
 
 <h3>Progress Report</h3>
