add participation grading

--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -31,6 +31,26 @@
     <%= f.text_field :email %>
   </div>
 
+  <div class="field">
+    <%= f.label :irq_grade %>
+    <%= f.number_field :irq_grade %>
+  </div>
+
+  <div class="field">
+    <%= f.label :trq_grade %>
+    <%= f.number_field :trq_grade %>
+  </div>
+
+  <div class="field">
+    <%= f.label :pes_grade %>
+    <%= f.number_field :pes_grade %>
+  </div>
+
+  <div class="field">
+    <%= f.label :participation_adjustment %>
+    <%= f.number_field :participation_adjustment %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
