add standard description on mouseover

--- a/app/views/students/_progress.html.erb
+++ b/app/views/students/_progress.html.erb
@@ -3,7 +3,7 @@
     <tr>
       <th>Exam</th>
       <% standards.each do |standard| %>
-        <th><%= standard.name %></th>
+        <th title="<%= standard.description %>"><%= standard.name %></th>
       <% end %>
     </tr>
   </thead>
