--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
     <p>
       <%= link_to "Home", :home %>
       <%= link_to "Progess Reports", :progress %>
+      <%= link_to "Grade Report", :grades %>
       <%= link_to "Students", :students %>
       <%= link_to "Standards", :standards %>
       <%= link_to "Exams", :exams %>
