suppress midsemester grade

--- a/app/views/students/_progress.html.erb
+++ b/app/views/students/_progress.html.erb
@@ -129,10 +129,12 @@
       <th><%= student.participation_grade %>%</th>
     </tr>
     <tr>
-      <th>Midsemster Grade:</th>
+      <!-- <th>Midsemster Grade:</th>
       <th>
         <%= student.midsemester_grade %>
-      </th>
+      </th> -->
+      <th></th>
+      <th></th>
       <th></th>
       <th>Semester Grade:</th>
       <th>
