--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,13 +12,9 @@
     <h1>sbg-rails</h1>
     <p>
       <%= link_to "Home", :home %>
-      <%= link_to "Progess Reports", :progress %>
-      <%= link_to "Grade Report", :grades %>
+      <%= link_to "Courses", :courses %>
       <%= link_to "Students", :students %>
       <%= link_to "Standards", :standards %>
-      <%= link_to "Exams", :exams %>
-      <%= link_to "Assessments", :assessments %>
-      <%= link_to "New Attempt", :new_attempt %>
     </p>
     <hr>
     <%= yield %>
