--- a/app/views/standards/new.html.erb
+++ b/app/views/standards/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form', standard: @standard %>
 
-<%= link_to 'Index', standards_path %>
+<%= link_to 'Index', course_standards_path(@standard.course) %>
