--- a/app/views/standards/show.html.erb
+++ b/app/views/standards/show.html.erb
@@ -10,19 +10,5 @@
   <%= @standard.description %>
 </p>
 
-<p>
-  <strong>Category:</strong>
-  <%= @standard.category %>
-</p>
-
-<p>
-  <strong>Exams:</strong>
-  <ul>
-    <% @standard.exams.each do |exam| %>
-      <li><%= link_to exam.name, exam_path(exam) %></li>
-    <% end %>
-  </ul>
-</p>
-
-<%= link_to 'Edit', edit_standard_path(@standard) %> |
-<%= link_to 'Index', standards_path %>
+<%= link_to 'Edit', edit_course_standard_path(@standard.course,@standard) %> |
+<%= link_to 'Index', course_standards_path(@standard.course) %>
