--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form', student: @student %>
 
-<%= link_to 'Index', students_path %>
+<%= link_to 'Index', course_students_path(@standard.course) %>
