--- a/app/views/standards/_form.html.erb
+++ b/app/views/standards/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(standard) do |f| %>
+<%= form_for [standard.course,standard] do |f| %>
   <% if standard.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(standard.errors.count, "error") %> prohibited this standard from being saved:</h2>
@@ -11,11 +11,6 @@
     </div>
   <% end %>
 
-  <div class="course">
-    <%= f.label :course %>
-    <%= f.collection_select(:course_id, Course.all, :id, :name) %>
-  </div>
-
   <div class="field">
     <%= f.label :name %>
     <%= f.text_field :name %>
@@ -24,11 +19,6 @@
   <div class="field">
     <%= f.label :description %>
     <%= f.text_field :description %>
-  </div>
-
-  <div class="field">
-    <%= f.label :category %>
-    <%= f.number_field :category %>
   </div>
 
   <div class="actions">
