--- a/app/views/standards/index.html.erb
+++ b/app/views/standards/index.html.erb
@@ -2,18 +2,11 @@
 
 <h1>Standards</h1>
 
-<h3>Progress Report</h3>
-
-<%= render 'progress', students: Student.all, standards: Standard.all_assessed %>
-
-<h3>Index</h3>
-
 <table>
   <thead>
     <tr>
       <th>Name</th>
       <th>Description</th>
-      <th>Category</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -23,10 +16,9 @@
       <tr>
         <td><%= standard.name %></td>
         <td><%= standard.description %></td>
-        <td><%= standard.category %></td>
-        <td><%= link_to 'Show', standard %></td>
-        <td><%= link_to 'Edit', edit_standard_path(standard) %></td>
-        <td><%= link_to 'Destroy', standard, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', course_standard_path(@course,standard) %></td>
+        <td><%= link_to 'Edit', edit_course_standard_path(@course,standard) %></td>
+        <td><%= link_to 'Destroy', course_standard_path(@course,standard), method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -34,4 +26,4 @@
 
 <br>
 
-<%= link_to 'New Standard', new_standard_path %>
+<%= link_to 'New Standard', new_course_standard_path(@course) %>
