--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(student) do |f| %>
+<%= form_for [student.course, student] do |f| %>
   <% if student.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(student.errors.count, "error") %> prohibited this student from being saved:</h2>
@@ -10,11 +10,6 @@
       </ul>
     </div>
   <% end %>
-
-  <div class="course">
-    <%= f.label :course %>
-    <%= f.collection_select(:course_id, Course.all, :id, :name) %>
-  </div>
 
   <div class="field">
     <%= f.label :first_name %>
