--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -18,10 +18,9 @@
         <td><%= student.name %></td>
         <td><%= student.school_identifier %></td>
         <td><%= student.email %></td>
-        <td><%= link_to 'Show', student %></td>
-        <td><%= link_to 'Grade', grade_student_path(student) %></td>
-        <td><%= link_to 'Edit', edit_student_path(student) %></td>
-        <td><%= link_to 'Destroy', student, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', course_student_path(@course,student) %></td>
+        <td><%= link_to 'Edit', edit_course_student_path(@course,student) %></td>
+        <td><%= link_to 'Destroy', course_student_path(@course,student), method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -29,4 +28,4 @@
 
 <br>
 
-<%= link_to 'New Student', new_student_path %>
+<%= link_to 'New Student', new_course_student_path(@course) %>
