bugfixes, sort students/standards by name

--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -20,5 +20,5 @@
   <%= @student.email %>
 </p>
 
-<%= link_to 'Edit', edit_course_student_path(@standard.course,@student) %> |
-<%= link_to 'Index', course_students_path(@standard.course) %>
+<%= link_to 'Edit', edit_course_student_path(@student.course,@student) %> |
+<%= link_to 'Index', course_students_path(@student.course) %>
