--- a/app/views/attempts/new.html.erb
+++ b/app/views/attempts/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form', attempt: @attempt %>
 
-<%= link_to 'Index', attempts_path %>
+<%= link_to 'Index', course_attempts_path(@attempt.course) %>
