--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
       <% if @course %>
         <%= link_to "Students", course_students_path(@course) %>
         <%= link_to "Standards", course_standards_path(@course) %>
+        <%= link_to "Attempts", course_attempts_path(@course) %>
       <% end %>
     </p>
     <hr>
