--- a/app/views/students/_progress.html.erb
+++ b/app/views/students/_progress.html.erb
@@ -1,167 +1,22 @@
-<table style="text-align:center;">
+<% standards.each_slice(16) do |standard_slice| %>
+<table style="text-align:center;border:1px solid black;">
   <thead>
-    <tr>
-      <th>Exam</th>
-      <% standards.each do |standard| %>
-        <th title="<%= standard.description %>"><%= standard.name %></th>
+    <tr style="border:1px solid black;">
+      <% standard_slice.each do |standard| %>
+        <th title="<%= standard.description %>" style="border:1px solid black;"><%= standard.name %></th>
       <% end %>
     </tr>
   </thead>
   <tbody>
-    <% exams.each_with_index do |exam,i| %>
-      <tr>
-        <td><%= exam.name %></td>
-        <% standards.each do |standard| %>
-          <% if assessment = exam.assessments.where(standard:standard).first %>
-            <td style="
-              font-size:1.2em;
-              font-weight:bold;
-              <% if student.decisive_attempt(assessment).outcome_id == -2 %>
-                color:gray;
-              <% elsif student.decisive_attempt(assessment).outcome_id == -1 %>
-                color:red;
-              <% elsif student.decisive_attempt(assessment).outcome_id == 0 %>
-                color:blue;
-              <% else %>
-                color:green;
-              <% end %>
-            ">
-              <%= student.decisive_attempt(assessment).outcome %><br>
-              <%= select_tag "attempt[#{assessment.id}]", options_for_select(Attempt::OUTCOME_ARRAY), include_blank: true if editable %>
-            </td>
-          <% else %>
-            <td></td>
-          <% end %>
+      <tr style="border:1px solid black;">
+        <% standard_slice.each do |standard| %>
+          <td style="border:1px solid black;height:1em;">
+            <% student.count_satisfactories_for_standard(standard).times do %>
+              <%= Attempt::MARK_HASH["satisfactory"] %>
+            <% end %>
+          </td>
         <% end %>
       </tr>
-      <% if i % 5 == 4 %>
-        <tr style="color:gray;">
-          <td></td>
-          <% standards.each do |standard| %>
-            <td style="text-align:center"><%= standard.name %></td>
-          <% end %>
-        </tr>
-      <% end %>
-    <% end %>
-    <tr>
-      <th>Total</th>
-      <% standards.each do |standard| %>
-        <td style="
-          font-size:1.2em;
-          <% if student.count_successful_attempts(standard) == 0 %>
-            color:red;
-          <% else %>
-            color:green;
-          <% end %>
-        ">
-          <% if student.count_successful_attempts(standard) == 0 %>
-            <%= Attempt::OUTCOME_LABELS[-1] %>
-          <% end %>
-          <% student.count_successful_attempts(standard).times do %><!--
-         --><%= Attempt::OUTCOME_LABELS[1] %><!--
-       --><% end %>
-        </td>
-      <% end %>
-    </tr>
   </tbody>
 </table>
-
-<!-- <p><strong>Participation:</strong></p>
-<ul>
-  <li>Individual Readiness Quiz: <%= student.irq_grade %>%</li>
-  <li>Team Readiness Quiz: <%= student.trq_grade %>%</li>
-  <li>Peer Evaluation Survey: <%= student.pes_grade %>%</li>
-  <li><em>Average: <%= student.participation_average %>%</em></li>
-  <li>Adjustment: <%= student.participation_adjustment %>%</li>
-  <li><strong>Grade: <%= student.participation_grade %>%</strong></li>
-</ul> -->
-<table style="text-align:center">
-  <thead>
-    <tr>
-      <th>Ind Quiz</th>
-      <th>Team Quiz</th>
-      <th>Survey</th>
-      <th>Participation</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td><%= student.irq_grade %>%</td>
-      <td><%= student.trq_grade %>%</td>
-      <td><%= student.pes_grade %>%</td>
-      <td>
-        <%= student.participation_average %>%
-        +(<%= student.participation_adjustment %>%)
-        =<%= student.participation_grade %>%
-      </td>
-    </tr>
-  </tbody>
-</table>
-
-<table style="text-align:center">
-  <thead>
-    <tr>
-      <th></th>
-      <th>Partially Mastered Cores (<%= Attempt::OUTCOME_LABELS[1] %>)</th>
-      <th>Mastered Cores (<%= Attempt::OUTCOME_LABELS[1]*2 %>)</th>
-      <th>Mastered Supplementals (<%= Attempt::OUTCOME_LABELS[1] %>)</th>
-      <th>Participation</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th>Req. for A</th>
-      <td>16</td>
-      <td>13</td>
-      <td>13</td>
-      <td>80%</td>
-    </tr>
-    <tr>
-      <th>Req. for B</th>
-      <td>14</td>
-      <td>10</td>
-      <td>10</td>
-      <td>70%</td>
-    </tr>
-    <tr>
-      <th>Req. for C</th>
-      <td>12</td>
-      <td>8</td>
-      <td>8</td>
-      <td>60%</td>
-    </tr>
-    <tr>
-      <th>Req. for D</th>
-      <td>10</td>
-      <td>N/A</td>
-      <td>N/A</td>
-      <td>N/A</td>
-    </tr>
-    <tr>
-      <th>You have:</th>
-      <th>
-        <%= student.core_single_success_count %>
-      </th>
-      <th>
-        <%= student.core_double_success_count %>
-      </th>
-      <th>
-        <%= student.supplemental_single_success_count %>
-      </th>
-      <th><%= student.participation_grade %>%</th>
-    </tr>
-    <tr>
-      <!-- <th>Midsemster Grade:</th>
-      <th>
-        <%= student.midsemester_grade %>
-      </th> -->
-      <th></th>
-      <th></th>
-      <th></th>
-      <th>Semester Grade:</th>
-      <th>
-        <%= student.semester_grade %>
-      </th>
-    </tr>
-  </tbody>
-</table>
+<% end %>
