--- a/app/views/attempts/index.html.erb
+++ b/app/views/attempts/index.html.erb
@@ -8,6 +8,7 @@
       <th>Student</th>
       <th>Standard</th>
       <th>Mark</th>
+      <th>Attempted On</th>
       <th>Note</th>
       <th colspan="3"></th>
     </tr>
@@ -19,6 +20,7 @@
         <td><%= attempt.student.name %></td>
         <td><%= attempt.standard.name %></td>
         <td><%= attempt.mark %></td>
+        <td><%= attempt.attempted_on.strftime("%F") if attempt.attempted_on %></td>
         <td><%= attempt.note %></td>
         <td><%= link_to 'Show', [attempt.course,attempt] %></td>
         <td><%= link_to 'Edit', edit_course_attempt_path(@course,attempt) %></td>
