--- a/app/views/attempts/show.html.erb
+++ b/app/views/attempts/show.html.erb
@@ -16,6 +16,11 @@
 </p>
 
 <p>
+  <strong>Attempted On:</strong>
+  <%= @attempt.attempted_on.strftime("%F") %>
+</p>
+
+<p>
   <strong>Note:</strong>
   <%= @attempt.note %>
 </p>
