smarter slicing of progress reports

--- a/app/views/students/_progress.html.erb
+++ b/app/views/students/_progress.html.erb
@@ -1,4 +1,4 @@
-<% standards.each_slice(16) do |standard_slice| %>
+<% standards.each_slice((standards.count+1)/2) do |standard_slice| %>
 <table style="text-align:center;border:1px solid black;">
   <thead>
     <tr style="border:1px solid black;">
