add standard categories

--- a/app/views/attempts/_form.html.erb
+++ b/app/views/attempts/_form.html.erb
@@ -18,7 +18,7 @@
 
   <div class="standard">
     <%= f.label :standard %>
-    <%= f.collection_select(:standard_id, Standard.where(course:attempt.course), :id, :name) %>
+    <%= f.collection_select(:standard_id, Standard.joins(:standard_category).where(standard_categories:{course:attempt.course}), :id, :name) %>
   </div>
 
   <div class="field">
