--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
       <%= link_to "Courses", :courses %>
       <% if @course %>
         <%= link_to "Students", course_students_path(@course) %>
+        <%= link_to "Standard Categories", course_standard_categories_path(@course) %>
         <%= link_to "Standards", course_standards_path(@course) %>
         <%= link_to "Attempts", course_attempts_path(@course) %>
         <%= link_to "Progress", progress_course_path(@course) %>
