add action for mass creating attempts per standard

--- a/app/views/standards/show.html.erb
+++ b/app/views/standards/show.html.erb
@@ -11,4 +11,5 @@
 </p>
 
 <%= link_to 'Edit', edit_course_standard_path(@standard.course,@standard) %> |
-<%= link_to 'Index', course_standards_path(@standard.course) %>
+<%= link_to 'Index', course_standards_path(@standard.course) %> |
+<%= link_to 'New Attempts', new_attempts_course_standard_path(@standard.course,@standard) %>
