--- a/app/views/attempts/show.html.erb
+++ b/app/views/attempts/show.html.erb
@@ -21,6 +21,11 @@
 </p>
 
 <p>
+  <strong>Attempt Points Used:</strong>
+  <%= @attempt.attempt_points_used %>
+</p>
+
+<p>
   <strong>Note:</strong>
   <%= @attempt.note %>
 </p>
