--- a/app/views/courses/_form.html.erb
+++ b/app/views/courses/_form.html.erb
@@ -21,6 +21,11 @@
     <%= f.text_field :description %>
   </div>
 
+  <div class="field">
+    <%= f.label :uses_attempt_points %>
+    <%= f.check_box :uses_attempt_points %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
