--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,7 @@
           <%= link_to "Students", course_students_path(@course) %>
           <%= link_to "Standard Categories", course_standard_categories_path(@course) %>
           <%= link_to "Standards", course_standards_path(@course) %>
+          <%= link_to "Attempt Categories", course_attempt_categories_path(@course) %>
           <%= link_to "Attempts", course_attempts_path(@course) %>
           <%= link_to "New Attempt", new_course_attempt_path(@course) %>
           <%= link_to "Recent ★s", index_recent_provisionals_course_attempts_path(@course) %>
