--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -31,6 +31,11 @@
     <%= f.text_field :email %>
   </div>
 
+  <div class="field">
+    <%= f.label :attempt_points_earned %>
+    <%= f.number_field :attempt_points_earned %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
